Fix spacing

--- a/public/style.css
+++ b/public/style.css
@@ -91,7 +91,7 @@
   --space-nav-mobile-bottom: 0.75rem;
   --space-nav-desktop-y: 0.55rem;
   --space-nav-margin-mobile: 1rem;
-  --space-nav-margin-desktop: 1.8rem;
+  --space-nav-margin-desktop: 1rem;
   --space-article-col-gap: 3rem;
   --space-section-gap: 2.1rem;
   --space-aside-gap: 1rem;
